--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,6 +20,12 @@ h1 {
   margin: 1rem 2rem 0 2rem;
 }
 
+h2 {
+  font-size: 6rem;
+  margin: 1rem 2rem 0 2rem;
+  text-align: center;
+}
+
 p {
   font-size: 2.5rem;
   margin: 0rem 2rem 0 2rem;
@@ -67,6 +73,42 @@ select {
   text-align: center;
   cursor: pointer;
 }
+
+input[type=radio] {
+  border: 1px solid #fff;
+  margin: 0.5em;
+  padding: 2em;
+  width: auto;
+  size: 5em;
+  -webkit-appearance: none;
+  border-radius: 15px;
+}
+
+input[type=radio]:checked {
+  background-color:  white;
+  background-size: 99px 99px;
+}
+
+.red {
+  background-color:  rgb(255, 80, 80);
+}
+
+.green {
+  background-color:  rgb(105, 255, 105);
+}
+
+.blue {
+  background-color:  rgb(62, 62, 255);
+}
+
+.black {
+  background-color:  rgb(20, 20, 20);
+}
+
+.yellow {
+  background-color:  rgb(252, 255, 63);
+}
+
 
 @media only screen and (max-width: 600px) {
 }
