--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-  font-size: 6rem;
+  font-size: 4.5rem;
   margin: 1rem 2rem 0 2rem;
   text-align: center;
 }
@@ -45,15 +45,15 @@ label {
 input {
   margin: 0 0 1rem 0;
   width: 100%;
-  height: 2.5rem;
-  font-size: 2rem;
+  height: 3rem;
+  font-size: 2.5rem;
 }
 
 select {
   margin: 0;
   width: 100.7%;
-  height: 2.5rem;
-  font-size: 2rem;
+  height: 3rem;
+  font-size: 2.5rem;
   background-color: white;
   cursor: pointer;
 }
@@ -85,7 +85,7 @@ input[type=radio] {
 }
 
 input[type=radio]:checked {
-  background-color:  white;
+  background-color:  rgba(255, 255, 255, 0.395);
   background-size: 99px 99px;
 }
 
