--- a/assets/styles.css
+++ b/assets/styles.css
@@ -84,29 +84,41 @@ input[type=radio] {
   border-radius: 15px;
 }
 
-input[type=radio]:checked {
-  background-color:  rgba(255, 255, 255, 0.395);
-  background-size: 99px 99px;
-}
+
 
 .red {
   background-color:  rgb(255, 80, 80);
+}
+.rred{
+  color: rgb(255, 80, 80);
 }
 
 .green {
   background-color:  rgb(105, 255, 105);
 }
+.ggreen{
+  color: rgb(105, 255, 105);
+}
 
 .blue {
   background-color:  rgb(62, 62, 255);
+}
+.bblue{
+  color: rgb(62, 62, 255);
 }
 
 .black {
   background-color:  rgb(20, 20, 20);
 }
+.bblack{
+  color: rgb(20, 20, 20);
+}
 
 .yellow {
   background-color:  rgb(252, 255, 63);
+}
+.yyellow{
+  color: rgb(252, 255, 63);
 }
 
 
