--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   color: lightgreen;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 2.5rem;
   margin: 0;
   padding: 0;
