--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,6 +26,13 @@ h2 {
   text-align: center;
 }
 
+.box{
+  margin: 2rem;
+  padding: 2rem;
+  background-color: #2a2a2a;
+  border-radius: 25px;
+}
+
 p {
   font-size: 2.5rem;
   margin: 0rem 2rem 0 2rem;
