--- a/assets/styles.css
+++ b/assets/styles.css
@@ -81,6 +81,23 @@ select {
   cursor: pointer;
 }
 
+button:disabled,
+button[disabled]{
+  margin: 3rem 0 0 41%;
+  background-color: #39495c4b;
+  border-radius: 15px;
+  font-size: 2.5rem;
+  width: auto;
+  height: auto;
+  color: rgba(255, 255, 255, 0.444);
+  padding: 1rem;
+  box-shadow: inset 0 -0.6em 1em -0.35em rgba(0, 0, 0, 0.17),
+    inset 0 0.6em 2em -0.3em rgba(255, 255, 255, 0.15),
+    inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
+  text-align: center;
+  cursor: pointer;
+}
+
 input[type=radio] {
   border: 1px solid #fff;
   margin: 0.5em;
